<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description" />

    <EditText
        android:id="@+id/description_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" android:height="180dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/s_accidents" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     >

        <Button
            android:id="@+id/bnt_back_DT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_txt"
            style="@style/ButtonText_2"
			android:background="@drawable/red_button" android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/bnt_next_DT"
            style="@style/ButtonText_2"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="14dp"
            android:background="@drawable/red_button"
            android:text="@string/next_txt" />

</RelativeLayout>

</LinearLayout>