<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/License_Plate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/license_plate_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_add"
            style="@style/ButtonText_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/add_txt" />

        <CheckBox
            android:id="@+id/cb_plates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Radio_delete" android:layout_marginLeft="50dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/List_plates"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:clickable="false" >

        <!-- Preview: listitem=@android:layout/simple_list_item_1 -->
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	 >

        <Button
            android:id="@+id/bnt_next_LT"
            style="@style/ButtonText_2"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/red_button"
            android:text="@string/next_txt" />

        <Button
            android:id="@+id/bnt_back_LT"
            style="@style/ButtonText_2"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/red_button"            
            android:text="@string/back_txt" />

    </RelativeLayout>

</LinearLayout>