<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_title_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" android:padding="5sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.86" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="24dp"
                android:text="@string/Description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/confirm_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:ems="10"
                android:height="100sp"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/confirm_description"
                android:layout_marginTop="29dp"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/confirm_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignLeft="@+id/confirm_description"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_send_event"
                style="@style/ButtonText_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="19dp"
                android:background="@drawable/red_button"
                android:text="@string/send_event_txt"
                android:width="90sp" />

            <Button
                android:id="@+id/btn_back_confirm"
                style="@style/ButtonText_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_send_event"
                android:layout_alignBottom="@+id/btn_send_event"
                android:layout_alignLeft="@+id/textView3"
                android:background="@drawable/red_button"
                android:text="@string/back_txt" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>