<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press"
            android:textAppearance="?android:attr/textAppearanceLarge" android:padding="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:gravity="center" >

        <Button
            android:id="@+id/Load_Image"
            style="@style/ButtonText_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:height="70dp"
            android:text="@string/Load_image"
            android:width="180dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_image"
            style="@style/ButtonText_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/red_button"
            android:height="70dp"
            android:text="@string/tct_Send_Image"
            android:width="180dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center">

        <Button
            android:id="@+id/btn_view_photos"
            style="@style/ButtonText_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:height="70dp"
            android:text="View Photos"
            android:width="180dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_back_photo_to_event"
        style="@style/ButtonText_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:text="@string/back_to_event" />

</LinearLayout>