<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/login_bg"
    >

    <LinearLayout
        android:id="@+id/ly_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_new_event"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/red_button"
            android:height="60sp"
            android:text="@string/New_Event_txt"
            android:width="250sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_marginLeft="40dp" android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_view_events"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.82"
            android:background="@drawable/red_button"
            android:height="60sp"
            android:text="@string/View_Event_txt"
            android:width="250sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_exit"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:background="@drawable/red_button"
            android:text="@string/txt_exit"
            android:width="90sp" />

    </LinearLayout>

</LinearLayout>